# browsy-automation

./: .gitignore  CHANGELOG.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  streamlit_app.py
examples/: basic_usage.py  fastapi_integration.py  performance_demo.py  standalone_server.py
src/browsy/: __init__.py  api.py  cli.py  config.py  engine.py  llm.py  performance.py  session.py  types.py
tests/: __init__.py  test_config.py  test_types.py
